--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,7 @@
 AllCops:
-  TargetRubyVersion: 2.4
+  TargetRubyVersion: 2.7
+  SuggestExtensions: false
+  NewCops: enable
 
 Style/StringLiterals:
   Enabled: true
@@ -11,3 +13,15 @@ Style/StringLiteralsInInterpolation:
 
 Layout/LineLength:
   Max: 120
+
+Style/Documentation:
+  Enabled: false
+
+Metrics/MethodLength:
+  Max: 15
+
+Gemspec/RequiredRubyVersion:
+  Enabled: false
+
+Style/StringConcatenation:
+  Enabled: false
